--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -27,11 +27,24 @@
 	       <li><a href="{{ url_for('main.user', username=current_user.username) }}">Profile</a> </li>
 	        {% endif %}
             </ul>
-	    <ul class="nav navbar-nav navbar-right">>
+	    <ul class="nav navbar-nav navbar-right">
+	        {% if current_user.can(Permission.MODERATE_COMMENTS) %}
+		<li><a href="{{ url_for('main.moderate') }}">Moderate Comments</a></li>
+		{% endif %}
 	        {% if current_user.is_authenticated() %}
-		<li><a href="{{ url_for('auth.logout') }}">Sign Out</a></li>
+		<li class="dropdown">
+		    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+		        <img src="{{ current_user.gravatar(size=18) }}">
+			Account<b class="caret"></b>
+		    </a>
+		    <ul class="dropdown-menu">
+		        <li><a href="#">Change Password</a></li>
+			<li><a href="#">Change_email</a></li>
+			<li><a href="{{ url_for('auth.logout') }}">Log Out</a></li>
+		    </ul>
+		</li>
 		{% else %}
-		<li><a href="{{ url_for('auth.login') }}">Sign In</a></li>
+		<li><a href="{{ url_for('auth.login') }}">Log In</a></li>
 		{% endif %}
 	    </ul>     
         </div>
